# CrashSpClean

./: .gitattributes  .gitignore  A-hatalar.txt  CHANGELOG.md  CMakeLists.txt  README.md  SETUP.txt  build.bat  build_result.txt  check_assets.ps1  cleanup.bat  fix_assets_cpp.ps1  github-setup.ps1  github-setup.sh  inject.bat  inject.ps1  install.bat  monitor.ps1  peek.ps1  read_assets.ps1  run_build.ps1  setup.bat  setup_wsl_bypass.ps1  split_assets.ps1  webserver_raw.txt
.claude/: settings.local.json
.github/workflows/: deploy-worker.yml  health-check.yml  release-v4.yml  release-v5.yml  release.yml  test-tag.yml
Cheat/: Assets.hpp  CfEndpoints.hpp  Cheat.hpp  Config.hpp  D3DRenderer.hpp  Fonts.hpp  GDIRenderer.hpp  GameSDK.hpp  Gui.hpp  GuiGlobal.hpp  GuiItems.hpp  ImCompat.hpp  KURULUM.txt  License.hpp  Memory.hpp  Overlay.hpp  ProxyExports.cpp  SimpleMath.h  SimpleMath.inl  Source.cpp  Stealth.hpp  WebServer.hpp  WsClient.hpp
ExternalLoader/: main.cpp
Installer/: installer.cpp
InternalLoader/: main.cpp
Loader/: loader.cpp  loader_exports.cpp
Server fud/: server.py
Server fud/license/: add_key.py  server.py
Service/: svc_dll.cpp
Uefi/: build.txt  loader.c  loader.inf
WslLoader/: main.c  wsl_cheatload.c
assets/: logo_bytes.h
cloudflare/: .env.example  ARCHITECTURE.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  wrangler.toml
cloudflare/d1/: seed.sql
cloudflare/d1/migrations/: 0001_initial_schema.sql  0002_add_github_url.sql
cloudflare/scripts/: admin.mjs  debug-admin.mjs  dev-setup.ps1  dev-setup.sh  live-test.mjs  set-admin-secret.mjs  smoke.mjs  test-download.mjs
cloudflare/workers/: index.ts  types.ts
